    copy of itself. (#308353)

  * Invalidate revision ids of bzr-roundtripped revisions when the 
    Subversion repository's UUID changes. (#318940, Debian #512325)

  * Handle unicode symlinks. (#319317)

  * Handle unicode in working tree names and some directory names. (#319313)

  * Cope with missing keys properly when branching based on VersionedFiles 
    (#311997)

  PERFORMANCE

   * Stop iterating over non-visible children of files when determining file ids. (#306259)
     This should improve the performance of stacking and lightweight checkouts.

  API

   * Added accessor functions for Subversion file properties.

bzr-svn 0.5.0~rc1			2008-12-08

  CHANGES

   * Implement set-revprops command.

   * Introduces a new Bzr<->Svn mapping format. Please 
     read UPGRADING for details.
	 
	 + Uses revision properties where possible. (#127736)

     + Branching schemes are no longer used and are 
	   replaced by "repository layouts", which are 
	   much more flexible. (#130372)

   * Will avoid browsing the full repository for bzr-revisions, 
     only closely related paths. (#158657)

  FEATURES

   * Performance has been improved *significantly*.

   * Add bzr:skip revision property to allow skipping 
     more detailed analysis of revisions not created by bzr.

   * "bzr revert" in a Subversion working tree now works.

   * Create branches/ directory automatically if it didn't exist
     when pushing merged revisions.

   * Only fetch signatures if they can be cheaply copied.

   * Also upgrade fileids in workingtree during svn-upgrade.

   * Add --until option to svn-import.

   * Add experimental svn-serve subcommand.

  BUG FIXES

   * Set bzr signature revision property during commit if possible.

   * Provide SvnWorkingTree._transport. (#264548)

   * Don't rely on cache when checking revision id during commit. (#230863)

   * Avoid pushing changes again when pushing new branch. (#203368)

   * Store text parents properly. (#260416)
