@@ -66,6 +66,8 @@ bzr-svn 0.5.0~rc2				UNRELEASED
   * Cope with missing keys properly when branching based on VersionedFiles 
     (#311997)
 
+  * Properly determine whether to analyse revision properties. 
+
   PERFORMANCE
 
    * Stop iterating over non-visible children of files when determining file ids. (#306259)
